# RRT-MPC

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  occupancy_grid_inflated.py  pyproject.toml  requirements.txt  rrt.py  rrt_pipeline.py  visualization.py
.github/workflows/: deploy-mkdocs.yml  test.yml
architecture/: index.html
configuration/: index.html
developer_guide/: index.html
docs/: architecture.md  configuration.md  developer_guide.md  index.md  mpc_theory.md  planning_rrt_star.md  system_integration.md  usage_pipeline.md  vehicle_dynamics.md
docs/javascripts/: mathjax.js
examples/: generate_map.py  generate_simulation_gif.py  plan_path.py  rrt_rect_demo.py  run_pipeline.py
legacy/: main.py  make_occupancy_grid.py  rrt.py  rrt_catmull.py  rrt_star.py  run_planar_vehicle_rear_axle.py  vehicle_draw.py  vehicle_model.py
misc/: README.md  make_occupancy_grid.py  map_utils.py  mpc_controller.py  rrt_image_grid.py  rrt_pipeline.py  test_vehicle_draw.py  visualization.py
mpc_rrt_star/: LICENSE  README.md
mpc_rrt_star/docs/: configuration.md  mpc_theory.md  planning_rrt_star.md  usage_pipeline.md  vehicle_dynamics.md
mpc_theory/: index.html
planning_rrt_star/: index.html
search/: search_index.json
src/: __init__.py  cli.py  config.py  logging_setup.py
stylesheets/: extra.css
system_integration/: index.html
tests/: conftest.py  test_maps.py  test_mpc_controller.py  test_pipeline.py  test_rrt_planner.py  test_rrt_star.py  test_vehicle_model.py
usage_pipeline/: index.html
vehicle_dynamics/: index.html
(+38 files in other folders)
