[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpc-rrt-star"
version = "0.1.0"
description = "Modular motion planning and MPC control framework combining deterministic RRT* with vehicle-dynamics-aware MPC tracking."
readme = "README.md"
authors = [{name = "OpenAI Prototype Team", email = "research@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "opencv-python>=4.8",
    "cvxpy>=1.4",
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://example.com/mpc-rrt-star"
Repository = "https://example.com/mpc-rrt-star.git"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.1.14",
    "black>=23.12",
]

[tool.black]
target-version = ["py39"]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "N", "ANN", "COM", "Q", "RET", "SIM", "RUF"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["ANN201", "ANN001"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_context = true
pretty = true
plugins = []
